--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "cssnano": "^6.0.0",
@@ -26,8 +25,6 @@
     "filemanager-webpack-plugin": "^8.0.0",
     "html-cli": "^1.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "image-minimizer-webpack-plugin": "^3.8.2",
-    "imagemin": "^8.0.1",
     "mini-css-extract-plugin": "^2.7.5",
     "postcss-loader": "^7.1.0",
     "postcss-preset-env": "^8.2.0",
@@ -36,7 +33,6 @@
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
-    "svgo": "^3.0.2",
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.1"
@@ -44,7 +40,6 @@
   "dependencies": {
     "@fancyapps/ui": "^5.0.13",
     "core-js": "^3.29.1",
-    "sass-resources-loader": "^2.2.5",
-    "svg-sprite-loader": "^6.0.11"
+    "sass-resources-loader": "^2.2.5"
   }
 }
